--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,10 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: 14
-            - run: yarn install
+            - run: npm install
             - uses: actions/cache@v2
               with:
                   path: ${{ github.workspace }}/.next/cache
-                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}
-            - run: yarn build
-            - run: yarn test
+                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+            - run: npm run build
+            - run: npm run test
