--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "dependencies": {
         "@apollo/client": "3.5.8",
-        "@liholiho/react-modal-hook": "^3.0.0",
+        "@liholiho/react-modal-hook": "3.0.0",
         "@prismicio/client": "6.2.0",
         "@prismicio/helpers": "2.1.1",
         "@techhof-ab/currency-converter": "2.0.0",
@@ -40,7 +40,7 @@
         "isomorphic-unfetch": "3.1.0",
         "mini-css-extract-plugin": "2.5.3",
         "moment": "2.29.1",
-        "next": "12.1.0",
+        "next": "12.1.6",
         "next-seo": "5.1.0",
         "next-transpile-modules": "9.0.0",
         "nprogress": "0.2.0",
@@ -55,7 +55,7 @@
         "react-responsive-carousel": "3.2.22",
         "react-scroll-up": "1.3.7",
         "react-select": "5.2.2",
-        "react-tender": "^1.0.0",
+        "react-tender": "1.0.0",
         "sass": "1.49.7",
         "styled-components": "5.3.3",
         "swr": "1.2.1",
@@ -63,8 +63,8 @@
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "12.0.10",
-        "@testing-library/jest-dom": "^5.16.2",
-        "@testing-library/react": "^12.1.3",
+        "@testing-library/jest-dom": "5.16.2",
+        "@testing-library/react": "12.1.3",
         "@types/enzyme": "3.10.11",
         "@types/node": "16.11.24",
         "@types/react": "17.0.39",
@@ -74,7 +74,7 @@
         "eslint-plugin-import": "2.25.4",
         "eslint-plugin-react": "7.28.0",
         "eslint-plugin-react-hooks": "4.3.0",
-        "jest": "^27.5.1",
+        "jest": "27.5.1",
         "prettier": "2.5.1",
         "webpack": "5.68.0"
     }
