--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@liholiho/react-modal-hook": "3.0.0",
         "@prismicio/client": "6.2.0",
         "@prismicio/helpers": "2.1.1",
+        "@sentry/nextjs": "^6.19.7",
         "axios": "0.27.2",
         "color": "4.2.0",
         "countries-list": "2.6.1",
@@ -42,7 +43,6 @@
         "next-transpile-modules": "9.0.0",
         "nprogress": "0.2.0",
         "react": "18.1.0",
-        "react-alert": "7.0.3",
         "react-context-hook": "3.0.7",
         "react-dom": "18.1.0",
         "react-icons": "4.3.1",
