--- a/package.json
+++ b/package.json
@@ -24,39 +24,37 @@
     "dependencies": {
         "@apollo/client": "3.6.2",
         "@liholiho/react-modal-hook": "3.0.0",
-        "@prismicio/client": "6.2.0",
-        "@prismicio/helpers": "2.1.1",
-        "@sentry/nextjs": "^6.19.7",
+        "@prismicio/client": "6.4.3",
+        "@prismicio/helpers": "2.3.0",
+        "@sentry/nextjs": "6.19.7",
         "axios": "0.27.2",
-        "color": "4.2.0",
+        "color": "4.2.3",
         "countries-list": "2.6.1",
         "country-code-info": "0.3.0",
         "country-code-lookup": "0.0.20",
         "cross-env": "7.0.3",
         "destyle.css": "3.0.2",
-        "graphql": "16.3.0",
+        "graphql": "16.5.0",
         "isomorphic-unfetch": "3.1.0",
         "mini-css-extract-plugin": "2.5.3",
-        "moment": "2.29.1",
+        "moment": "2.29.3",
         "next": "12.1.6",
         "next-seo": "5.4.0",
         "next-transpile-modules": "9.0.0",
         "nprogress": "0.2.0",
         "react": "18.1.0",
-        "react-context-hook": "3.0.7",
+        "react-context-hook": "github:spsgroupab/react-context-hook",
         "react-dom": "18.1.0",
         "react-icons": "4.3.1",
-        "react-image": "4.0.3",
-        "react-image-gallery": "1.2.7",
+        "react-image-gallery": "1.2.8",
         "react-markdown": "5.0.3",
         "react-responsive-carousel": "3.2.22",
         "react-scroll-up": "1.3.7",
-        "react-select": "5.2.2",
         "react-tender": "1.0.0",
         "sass": "1.51.0",
         "styled-components": "5.3.5",
         "swr": "1.3.0",
-        "typescript": "4.5.5"
+        "typescript": "4.6.4"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "12.0.10",
@@ -64,7 +62,7 @@
         "@testing-library/react": "13.2.0",
         "@types/enzyme": "3.10.11",
         "@types/node": "16.11.24",
-        "@types/react": "17.0.39",
+        "@types/react": "18.0.9",
         "@types/styled-components": "5.1.22",
         "enzyme": "3.11.0",
         "eslint": "8.8.0",
@@ -72,7 +70,7 @@
         "eslint-plugin-react": "7.28.0",
         "eslint-plugin-react-hooks": "4.3.0",
         "jest": "27.5.1",
-        "prettier": "2.5.1",
-        "webpack": "5.68.0"
+        "prettier": "2.6.2",
+        "webpack": "5.72.1"
     }
 }
