--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,29 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+    "compilerOptions": {
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "strict": false,
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true,
+        "esModuleInterop": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "removeComments": false,
+        "jsx": "preserve",
+        "incremental": true,
+        "downlevelIteration": true
+    },
+    "exclude": [
+        "dist",
+        "node_modules",
+        "out",
+        "public",
+        ".next",
+        "next.config.js"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "removeComments": false,
-    "jsx": "preserve",
-    "incremental": true
-  },
-  "exclude": [
-    "dist",
-    "node_modules",
-    "out",
-    "public",
-    ".next",
-    "next.config.js"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
