--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
         "eslint-plugin-import": "2.26.0",
         "eslint-plugin-react": "7.29.4",
         "eslint-plugin-react-hooks": "4.5.0",
-        "jest": "27.5.1",
+        "jest": "28.1.0",
+        "jest-environment-jsdom": "28.1.0",
         "prettier": "2.6.2",
         "webpack": "5.72.1"
     }
