--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "dev": "next",
         "build": "next build",
+        "postbuild": "next-sitemap",
         "analyze": "ANALYZE=true npm run build",
         "start": "next start -p $PORT",
         "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ./",
@@ -69,6 +70,7 @@
         "eslint-plugin-react-hooks": "4.5.0",
         "jest": "28.1.0",
         "jest-environment-jsdom": "28.1.0",
+        "next-sitemap": "2.5.21",
         "prettier": "2.6.2",
         "webpack": "5.72.1"
     }
