--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
         "@types/node": "16.11.36",
         "@types/react": "18.0.9",
         "@types/styled-components": "5.1.25",
+        "babel-eslint": "10.1.0",
         "enzyme": "3.11.0",
         "eslint": "8.16.0",
+        "eslint-config-next": "12.1.6",
         "eslint-plugin-import": "2.26.0",
         "eslint-plugin-react": "7.30.0",
         "eslint-plugin-react-hooks": "4.5.0",
