--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "dev": "next",
         "build": "next build",
         "postbuild": "next-sitemap",
-        "analyze": "ANALYZE=true npm run build",
+        "analyze": "ANALYZE=true next build",
         "start": "next start -p $PORT",
-        "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ./",
+        "lint": "next lint",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
@@ -56,20 +56,17 @@
         "typescript": "4.6.4"
     },
     "devDependencies": {
-        "@next/eslint-plugin-next": "12.1.6",
+        "@next/bundle-analyzer": "12.1.6",
         "@testing-library/jest-dom": "5.16.4",
         "@testing-library/react": "13.2.0",
         "@types/enzyme": "3.10.12",
         "@types/node": "16.11.36",
         "@types/react": "18.0.9",
         "@types/styled-components": "5.1.25",
-        "babel-eslint": "10.1.0",
         "enzyme": "3.11.0",
         "eslint": "8.16.0",
         "eslint-config-next": "12.1.6",
-        "eslint-plugin-import": "2.26.0",
-        "eslint-plugin-react": "7.30.0",
-        "eslint-plugin-react-hooks": "4.5.0",
+        "eslint-config-prettier": "8.5.0",
         "jest": "28.1.0",
         "jest-environment-jsdom": "28.1.0",
         "next-sitemap": "2.5.24",
