--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-responsive-carousel": "3.2.23",
         "react-tender": "1.1.0",
         "sass": "1.52.1",
+        "sharp": "0.30.5",
         "styled-components": "5.3.5",
         "swr": "1.3.0",
         "typescript": "4.6.4"
