--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
 DOMAIN=candybysweden.com
-SHOPIFY_TOKEN=234f356a7e866a3fecfa3d2f0c9a7c85
 SHOPIFY_DOMAIN=candy-by-sweden.myshopify.com
+SHOPIFY_TOKEN=234f356a7e866a3fecfa3d2f0c9a7c85
 PRISMIC_DOMAIN=https://candy-by-sweden.cdn.prismic.io/api/v2
 STORE_LOCALES=en-US
 STORE_CURRENCIES=USD
 BETA_FEATURES=false
+SENTRY_DSN=https://44cb8b32ea1d49098de32524216e86ca@o1243416.ingest.sentry.io/6398730
