--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
         "mini-css-extract-plugin": "2.6.1",
         "next": "12.1.6",
         "next-seo": "5.4.0",
-        "next-transpile-modules": "9.0.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
         "react-context-hook": "github:spsgroupab/react-context-hook",
@@ -50,7 +49,7 @@
         "react-image-gallery": "1.2.8",
         "react-markdown": "8.0.3",
         "react-rating-stars-component": "2.2.0",
-        "react-responsive-carousel": "3.2.23",
+        "react-slick": "0.29.0",
         "react-tender": "1.1.0",
         "sass": "1.53.0",
         "sharp": "0.30.7",
