--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "isomorphic-unfetch": "3.1.0",
         "mini-css-extract-plugin": "2.6.1",
         "next": "12.1.6",
+        "next-i18next": "11.0.0",
         "next-seo": "5.4.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
