--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "candybysweden-frontend",
     "version": "1.2.0",
     "private": true,
+    "engines" : { 
+        "npm" : ">=8",
+        "node" : ">=16"
+    },
     "cacheDirectories": [
         ".next/cache"
     ],
