--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,7 @@ SHOPIFY_TOKEN=234f356a7e866a3fecfa3d2f0c9a7c85
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 STORE_LOCALES=en-US,en-GB
 STORE_CURRENCIES=USD
+GTM=GTM-KL4HWGJ
 SENTRY_DSN=https://44cb8b32ea1d49098de32524216e86ca@o1243416.ingest.sentry.io/6398730
 
 # Feature flags
