--- a/.gitlab/.gitlab-webide.yml
+++ b/.gitlab/.gitlab-webide.yml
@@ -1,10 +1,10 @@
-
 terminal:
-  image: node:16-alpine
+  image:
+    name: node:16-alpine
   services:
     - name: registry.gitlab.com/gitlab-org/webide-file-sync:latest
-  alias: webide-file-sync
-  entrypoint: ["/bin/sh"]
-  command: ["-c", "sleep 5 && ./webide-file-sync -project-dir $CI_PROJECT_DIR"]
-  ports:
-    - number: 3000
+      alias: webide-file-sync
+      entrypoint: ["/bin/sh"]
+      command: ["-c", "sleep 5 && ./webide-file-sync -project-dir $CI_PROJECT_DIR"]
+      ports:
+        - number: 3000
