--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@sentry/tracing": "7.3.1",
         "axios": "0.27.2",
         "color": "4.2.3",
+        "cookies-next": "^2.1.1",
         "countries-list": "2.6.1",
         "country-code-info": "0.3.0",
         "country-code-lookup": "0.0.20",
@@ -60,7 +61,8 @@
         "sharp": "0.30.7",
         "styled-components": "5.3.5",
         "swr": "1.3.0",
-        "typescript": "4.7.4"
+        "typescript": "4.7.4",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@next/bundle-analyzer": "12.2.0",
