API: Start work on removing hardcoded things.

--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,10 @@ PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 STORE_LOCALES=en-US,en-GB
 STORE_CURRENCIES=USD
 GTM=GTM-KL4HWGJ
-SENTRY_DSN=https://44cb8b32ea1d49098de32524216e86ca@o1243416.ingest.sentry.io/6398730
+
+# Colors
+ACCENT_PRIMARY=#0476D9
+ACCENT_SECONDARY=#F7D435
 
 # Feature flags
 FEATURE_ACCOUNTS=false
