--- a/.eslintrc
+++ b/.eslintrc
@@ -16,13 +16,7 @@
         "jsx-a11y/alt-text": 0,
         "no-unused-vars": 1,
         "no-console": ["error", { "allow": ["warn", "error"] }],
-        "indent": [
-            "error",
-            4,
-            {
-                "SwitchCase": 1
-            }
-        ],
+        "indent": "off",
         "semi": ["error", "always"],
         "brace-style": [
             "error",
