--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "next": "12.2.5",
         "next-i18next": "12.0.0",
         "next-seo": "5.5.0",
+        "node-html-parser": "^6.0.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
         "react-context-hook": "github:filiphsps/react-context-hook",
