--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react-icons": "4.4.0",
         "react-image-gallery": "1.2.9",
         "react-rating-stars-component": "2.2.0",
+        "react-shopify-analytics": "1.1.0",
         "react-slick": "0.29.0",
         "react-tender": "1.1.0",
         "react-use-cart": "^1.13.0",
