--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "cookies-next": "^2.1.1",
         "cross-env": "7.0.3",
         "destyle.css": "3.0.2",
+        "easy-currencies": "^1.7.0",
         "graphql": "16.6.0",
+        "iso-country-currency": "^0.6.0",
         "next": "12.2.5",
         "next-i18next": "12.0.0",
         "next-seo": "5.5.0",
