--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
         "algoliasearch": "4.14.2",
         "axios": "0.27.2",
         "color": "4.2.3",
-        "cookies-next": "^2.1.1",
+        "cookies-next": "2.1.1",
         "cross-env": "7.0.3",
         "destyle.css": "3.0.2",
-        "easy-currencies": "^1.7.0",
+        "easy-currencies": "1.7.0",
         "graphql": "16.6.0",
-        "iso-country-currency": "^0.6.0",
+        "iso-country-currency": "0.6.0",
         "next": "12.2.5",
         "next-i18next": "12.0.0",
         "next-seo": "5.5.0",
-        "node-html-parser": "^6.0.0",
+        "node-html-parser": "6.0.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
         "react-context-hook": "github:filiphsps/react-context-hook",
@@ -54,8 +54,8 @@
         "sharp": "0.30.7",
         "styled-components": "5.3.5",
         "swr": "1.3.0",
-        "typescript": "4.7.4",
-        "uuid": "^8.3.2"
+        "typescript": "4.8.3",
+        "uuid": "8.3.2"
     },
     "devDependencies": {
         "@next/bundle-analyzer": "12.2.5",
@@ -66,7 +66,7 @@
         "@types/react": "18.0.17",
         "@types/styled-components": "5.1.26",
         "enzyme": "3.11.0",
-        "eslint": "8.22.0",
+        "eslint": "8.2.0",
         "eslint-config-next": "12.2.5",
         "eslint-config-prettier": "8.5.0",
         "jest": "29.0.0",
