--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ DOMAIN=candybysweden.com
 SHOPIFY_DOMAIN=candy-by-sweden.myshopify.com
 SHOPIFY_TOKEN=234f356a7e866a3fecfa3d2f0c9a7c85
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
-STORE_LOCALES=en-US,en-GB
+STORE_LOCALES=en-US
 STORE_CURRENCIES=USD
 GTM=GTM-KL4HWGJ
 
