chore(deps): Upgrade nextjs version.
As a part of the upgrade I finally managed to fix a bunch of
long-standing issues.

This PR also brings a huge rework to i18n thanks to some behind the
scene changes in nextjs 13.

Finally, currencies are finally fixed; visually. We still need to
properly integrate them with the Storefront API.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "name": "Next.js: debug server-side",
             "type": "node-terminal",
             "request": "launch",
-            "command": "SHOPIFY_DOMAIN=\"sweet-side-of-sweden.myshopify.com\" SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045 npm run dev"
+            "command": "SHOPIFY_DOMAIN=\"sweet-side-of-sweden.myshopify.com\" SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045 STORE_LOCALES=\"en-US,en-GB,sv-SE\" npm run dev"
         },
         {
             "name": "Next.js: debug client-side",
@@ -18,12 +18,24 @@
             "name": "Next.js: debug full stack",
             "type": "node-terminal",
             "request": "launch",
-            "command": "SHOPIFY_DOMAIN=\"sweet-side-of-sweden.myshopify.com\" SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045 npm run dev",
+            "command": "SHOPIFY_DOMAIN=\"sweet-side-of-sweden.myshopify.com\" SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045 STORE_LOCALES=\"en-US,en-GB,sv-SE\" npm run dev",
             "serverReadyAction": {
                 "pattern": "started server on .+, url: (https?://.+)",
                 "uriFormat": "%s",
                 "action": "debugWithChrome"
             }
+        },
+        {
+            "name": "Build",
+            "type": "node-terminal",
+            "request": "launch",
+            "command": "SHOPIFY_DOMAIN=\"sweet-side-of-sweden.myshopify.com\" SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045 STORE_LOCALES=\"en-US,en-GB\" npm run build"
+        },
+        {
+            "name": "Start",
+            "type": "node-terminal",
+            "request": "launch",
+            "command": "SHOPIFY_DOMAIN=\"sweet-side-of-sweden.myshopify.com\" SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045 STORE_LOCALES=\"en-US,en-GB\" PORT=3000 npm run start"
         }
     ]
 }
