--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "candybysweden-frontend",
     "version": "1.3.0",
     "private": true,
+    "type": "module",
     "engines": {
         "npm": ">=8",
         "node": ">=16"
@@ -13,6 +14,7 @@
         "dev": "next",
         "build": "next build",
         "postbuild": "next-sitemap",
+        "sitemap": "next-sitemap",
         "analyze": "ANALYZE=true next build",
         "start": "next start -p $PORT",
         "lint": "next lint",
@@ -27,6 +29,7 @@
         "@apollo/client": "3.7.14",
         "@prismicio/client": "6.8.0",
         "@prismicio/helpers": "2.3.9",
+        "accept-language": "3.0.18",
         "algoliasearch": "4.17.0",
         "axios": "0.27.2",
         "color": "4.2.3",
@@ -36,8 +39,9 @@
         "easy-currencies": "1.7.0",
         "graphql": "16.6.0",
         "iso-country-currency": "0.7.2",
-        "next": "12.2.6",
+        "next": "13.4.4",
         "next-i18next": "13.2.2",
+        "next-intercept-stdout": "1.0.1",
         "next-seo": "5.15.0",
         "node-html-parser": "6.1.5",
         "nprogress": "0.2.0",
@@ -50,6 +54,7 @@
         "react-slick": "0.29.0",
         "react-tender": "1.1.1",
         "react-use-cart": "1.13.0",
+        "rooks": "7.14.1",
         "sass": "1.56.2",
         "sharp": "0.32.1",
         "styled-components": "5.3.10",
@@ -66,11 +71,11 @@
         "@types/styled-components": "5.1.26",
         "enzyme": "3.11.0",
         "eslint": "8.41.0",
-        "eslint-config-next": "12.2.6",
+        "eslint-config-next": "13.4.4",
         "eslint-config-prettier": "8.8.0",
         "jest": "29.5.0",
         "jest-environment-jsdom": "29.5.0",
-        "next-sitemap": "3.1.55",
+        "next-sitemap": "4.1.3",
         "prettier": "2.8.8",
         "webpack": "5.83.1"
     }
