--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
-DOMAIN=candybysweden.com
-SHOPIFY_DOMAIN=candy-by-sweden.myshopify.com
-SHOPIFY_TOKEN=234f356a7e866a3fecfa3d2f0c9a7c85
+DOMAIN=www.sweetsideofsweden.com
+SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
+SHOPIFY_TOKEN=9999e3dceb5bc1faee8441045bf04045
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
-STORE_LOCALES=en-US
-STORE_CURRENCIES=USD
-GTM=GTM-KL4HWGJ
+STORE_LOCALES=en-US,sv-SE,en-GB
+STORE_CURRENCIES=USD,GBP,EUR,CHF,SEK
+GTM=GTM-KGVH3RX
 
 # Feature flags
 FEATURE_ACCOUNTS=false
