--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
         "analyze": "ANALYZE=true next build",
         "start": "next start -p $PORT",
         "lint": "next lint",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
-        "test:coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls",
+        "test": "npm-run-all test:*",
+        "test:jest": "jest --coverage",
         "prettier": "prettier --config .prettierrc src/**/*.* --check",
-        "prettier-format": "prettier --config .prettierrc src/**/*.* --write"
+        "watch:test": "jest --watch",
+        "format:prettier": "prettier --config .prettierrc src/**/*.* --write"
     },
     "dependencies": {
         "@apollo/client": "3.7.14",
@@ -76,6 +75,7 @@
         "jest": "29.5.0",
         "jest-environment-jsdom": "29.5.0",
         "next-sitemap": "4.1.3",
+        "npm-run-all": "4.1.5",
         "prettier": "2.8.8",
         "webpack": "5.84.1"
     }
