--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@prismicio/client": "7.0.1",
         "@prismicio/helpers": "2.3.9",
         "@sentry/nextjs": "7.53.1",
+        "@shopify/hydrogen-react": "2023.4.3",
         "accept-language": "3.0.18",
         "algoliasearch": "4.17.1",
         "axios": "1.4.0",
