Everywhere: Migrate to `@shopify/hydrogen-react`.
As an side-result of the required code changes a bunch of design updates
have also occured. Noteably the header menu, product page and, cart page.

--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
         "test": "npm-run-all test:*",
         "test:jest": "jest --coverage",
         "watch:test": "jest --watch",
-        "format": "npm-run-all *:format**",
+        "format": "npm-run-all prettier:format:*",
         "prettier": "prettier --config .prettierrc src/**/*.* --check",
         "prettier:format:src": "prettier --config .prettierrc src/**/*.* --write",
-        "prettier:format:pages": "prettier --config .prettierrc src/**/*.* --write",
-        "prettier:format:app": "prettier --config .prettierrc src/**/*.* --write"
+        "prettier:format:pages": "prettier --config .prettierrc pages/**/*.* --write",
+        "prettier:format:app": "prettier --config .prettierrc app/**/*.* --write"
     },
     "dependencies": {
         "@apollo/client": "3.7.14",
         "@prismicio/client": "7.0.1",
         "@prismicio/helpers": "2.3.9",
-        "@sentry/nextjs": "7.53.1",
+        "@sentry/nextjs": "7.54.0",
         "@shopify/hydrogen-react": "2023.4.3",
         "accept-language": "3.0.18",
         "algoliasearch": "4.17.1",
@@ -43,9 +43,8 @@
         "easy-currencies": "1.7.0",
         "graphql": "16.6.0",
         "iso-country-currency": "0.7.2",
-        "next": "13.4.4",
-        "next-i18next": "13.2.2",
-        "next-intercept-stdout": "1.0.1",
+        "next": "13.4.5",
+        "next-i18next": "13.3.0",
         "next-seo": "6.0.0",
         "node-html-parser": "6.1.5",
         "nprogress": "0.2.0",
@@ -57,7 +56,6 @@
         "react-shopify-analytics": "1.1.0",
         "react-slick": "0.29.0",
         "react-tender": "1.1.1",
-        "react-use-cart": "1.13.0",
         "rooks": "7.14.1",
         "sass": "1.62.1",
         "sharp": "0.32.1",
