--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
         "prettier": "prettier --config .prettierrc src/**/*.* --check",
         "prettier:format:src": "prettier --config .prettierrc src/**/*.* --write",
         "prettier:format:pages": "prettier --config .prettierrc pages/**/*.* --write",
-        "prettier:format:app": "prettier --config .prettierrc app/**/*.* --write"
+        "prettier:format:app": "prettier --config .prettierrc app/**/*.* --write",
+        "slicemachine": "start-slicemachine"
     },
     "dependencies": {
         "@apollo/client": "3.7.15",
         "@prismicio/client": "7.1.0",
         "@prismicio/helpers": "2.3.9",
+        "@prismicio/next": "1.3.1",
+        "@prismicio/react": "2.7.0",
         "@sentry/nextjs": "7.55.2",
         "@shopify/hydrogen-react": "2023.4.3",
         "accept-language": "3.0.18",
@@ -65,6 +68,7 @@
         "uuid": "9.0.0"
     },
     "devDependencies": {
+        "@slicemachine/adapter-next": "0.3.0",
         "@testing-library/jest-dom": "5.16.5",
         "@testing-library/react": "14.0.0",
         "@types/enzyme": "3.10.13",
@@ -80,6 +84,7 @@
         "next-sitemap": "4.1.3",
         "npm-run-all": "4.1.5",
         "prettier": "2.8.8",
+        "slice-machine-ui": "1.2.0",
         "webpack": "5.87.0"
     }
 }
