CI: Use the `lts` version of nodejs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ jobs:
         env:
             CI: true
         steps:
-            - uses: actions/checkout@v3
+            - name: 🕶️ Checkout repository
+              uses: actions/checkout@v3
 
             - name: 💾 Cache node modules
               id: cache-npm
@@ -22,10 +23,10 @@ jobs:
               with:
                   # npm cache files are stored in `~/.npm` on Linux/macOS
                   path: ~/.npm
-                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                  key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
-                      ${{ runner.os }}-build-${{ env.cache-name }}-
-                      ${{ runner.os }}-build-
+                      ${{ runner.os }}-test-${{ env.cache-name }}-
+                      ${{ runner.os }}-test-
                       ${{ runner.os }}-
 
             - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
@@ -36,7 +37,10 @@ jobs:
             - name: 🏎️ Setup nodejs
               uses: actions/setup-node@v3
               with:
-                  node-version: lts
+                  node-version: 'lts/*'
+
+            - name: 📦 Download dependencies
+              run: npm ci
 
             - name: 🧪 Test
               run: npm run test
@@ -47,7 +51,8 @@ jobs:
         env:
             CI: true
         steps:
-            - uses: actions/checkout@v3
+            - name: 🕶️ Checkout repository
+              uses: actions/checkout@v3
 
             - name: 💾 Cache node modules
               id: cache-npm
@@ -71,7 +76,7 @@ jobs:
             - name: 🏎️ Setup nodejs
               uses: actions/setup-node@v3
               with:
-                  node-version: lts
+                  node-version: 'lts/*'
 
             - name: 📦 Download dependencies
               run: npm ci
