--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
+    "version": 2,
     "trailingSlash": true,
+    "public": false,
     "github": {
-        "silent": true
+        "silent": true,
+        "enabled": false
     }
 }
