--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "engines": {
         "npm": ">=8",
-        "node": ">=16"
+        "node": "^18"
     },
     "cacheDirectories": [
         ".next/cache"
