--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "iso-country-currency": "0.7.2",
         "next": "13.4.7",
         "next-i18next": "14.0.0",
+        "next-plugin-preval": "1.2.5",
         "next-seo": "6.1.0",
         "node-html-parser": "6.1.5",
         "nprogress": "0.2.0",
