--- a/package.json
+++ b/package.json
@@ -43,12 +43,9 @@
         "algoliasearch": "4.17.2",
         "axios": "1.4.0",
         "color": "4.2.3",
-        "cookies-next": "2.1.2",
-        "cross-env": "7.0.3",
         "destyle.css": "4.0.0",
         "easy-currencies": "1.7.0",
         "graphql": "16.7.1",
-        "iso-country-currency": "0.7.2",
         "next": "13.4.7",
         "next-i18next": "14.0.0",
         "next-plugin-preval": "1.2.5",
@@ -68,12 +65,11 @@
         "sharp": "0.32.1",
         "styled-components": "5.3.11",
         "swr": "2.2.0",
-        "typescript": "5.1.3",
+        "typescript": "5.1.5",
         "uuid": "9.0.0"
     },
     "devDependencies": {
         "@slicemachine/adapter-next": "0.3.1",
-        "@testing-library/jest-dom": "5.16.5",
         "@testing-library/react": "14.0.0",
         "@types/enzyme": "3.10.13",
         "@types/node": "18.16.18",
@@ -89,7 +85,6 @@
         "npm-run-all": "4.1.5",
         "prettier": "2.8.8",
         "pretty-xml": "1.2.1",
-        "slice-machine-ui": "1.3.0",
-        "webpack": "5.88.0"
+        "slice-machine-ui": "1.3.0"
     }
 }
