--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@prismicio/next": "1.3.2",
         "@prismicio/react": "2.7.1",
         "@sentry/nextjs": "7.56.0",
+        "@shopify/hydrogen": "^2023.4.6",
         "@shopify/hydrogen-react": "2023.4.5",
         "accept-language": "3.0.18",
         "algoliasearch": "4.17.2",
