--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,5 @@ SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=5862a57ad46168483b8cf5ab0e08cec4
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 STORE_LOCALES=en-US,en-GB
-STORE_CURRENCIES=USD,GBP,EUR,SEK
+STORE_CURRENCIES=USD,GBP
 GTM=GTM-KGVH3RX
