--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
     test:
         name: 🔬 Test
+        timeout-minutes: 10
         runs-on: ubuntu-latest
         env:
             CI: true
@@ -64,9 +65,10 @@ jobs:
             - name: 🛠️ Build
               run: npm run build
 
-    deploy:
-        name: 🚚 Deploy
+    deploy-vercel:
+        name: 🚚 Deploy Vercel
         needs: [test, build]
+        timeout-minutes: 30
         runs-on: ubuntu-latest
         env:
             CI: true
@@ -105,3 +107,49 @@ jobs:
 
             - name: 🔥 Purge CloudFlare cache
               run: 'curl -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ID }}/purge_cache" -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_TOKEN }}" -H "Content-Type: application/json" --data "{\"purge_everything\":true}"'
+
+    deploy-oxygen:
+        name: 🚚 Deploy Oxygen
+        needs: [test, build]
+        timeout-minutes: 30
+        runs-on: ubuntu-latest
+        env:
+            CI: true
+        steps:
+            - name: 🕶️ Checkout repository
+              uses: actions/checkout@v3
+
+            - name: 🏎️ Setup nodejs
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 'lts/*'
+
+            - name: 💾 Cache node modules
+              uses: actions/cache@v3
+              with:
+                  path: ~/.npm
+                  key: ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-build-
+
+            - name: 📦 Download dependencies
+              run: npm ci
+
+            - name: 🚚 Build and push to Oxygen
+              id: deploy
+              uses: shopify/oxygenctl-action@v4
+              with:
+                  oxygen_health_check: true
+                  oxygen_deployment_token: ${{ secrets.OXYGEN_DEPLOYMENT_TOKEN_2130225 }}
+                  oxygen_worker_dir: '.next/server'
+                  oxygen_client_dir: '.next/static'
+                  build_command: 'HYDROGEN_ASSET_BASE_URL=$OXYGEN_ASSET_BASE_URL npm run build'
+
+            - name: 🛫 Create GitHub Deployment
+              uses: shopify/github-deployment-action@v1
+              if: always()
+              with:
+                  token: ${{ github.token }}
+                  environment: 'preview'
+                  preview_url: ${{ steps.deploy.outputs.url }}
+                  description: ${{ github.event.head_commit.message }}
