--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,9 @@ jobs:
             - name: 💾 Cache node modules
               uses: actions/cache@v3
               with:
-                  path: ~/.npm
+                  path: |
+                      ~/.npm
+                      .next
                   key: ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
                       ${{ runner.os }}-node-build-
