--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@ DOMAIN=www.sweetsideofsweden.com
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
-STORE_LOCALES=en-US,en-GB
+STORE_LOCALES=en-US
 STORE_CURRENCIES=USD,GBP,EUR,SEK
 GTM=GTM-KGVH3RX
