--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "@sentry/nextjs": "7.57.0",
         "@shopify/hydrogen": "^2023.4.6",
         "@shopify/hydrogen-react": "2023.4.5",
-        "accept-language": "3.0.18",
+        "accept-language-parser": "^1.5.0",
         "algoliasearch": "4.17.2",
         "axios": "1.4.0",
         "color": "4.2.3",
