--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "target": "ESNext",
+        "lib": ["dom", "dom.iterable", "ESNext"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": false,
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
         "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "node",
+        "module": "ESNext",
+        "moduleResolution": "Node",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "removeComments": false,
@@ -23,6 +23,6 @@
         ],
         "strictNullChecks": true
     },
-    "exclude": ["dist", "node_modules", "out", "public", ".next", "next.config.js"],
+    "exclude": ["dist", "node_modules", "out", "public", ".next", "next.config.mjs"],
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
