--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
         "@prismicio/next": "1.3.2",
         "@prismicio/react": "2.7.1",
         "@sentry/nextjs": "7.57.0",
-        "@shopify/hydrogen": "^2023.4.6",
+        "@shopify/hydrogen": "2023.4.6",
         "@shopify/hydrogen-react": "2023.4.5",
-        "accept-language-parser": "^1.5.0",
+        "accept-language-parser": "1.5.0",
         "algoliasearch": "4.17.2",
         "axios": "1.4.0",
         "color": "4.2.3",
@@ -64,6 +64,7 @@
         "rooks": "7.14.1",
         "sass": "1.63.6",
         "sharp": "0.32.1",
+        "slick-carousel": "1.8.1",
         "styled-components": "5.3.11",
         "swr": "2.2.0",
         "typescript": "5.1.6",
