--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "candybysweden-frontend",
+    "name": "sweetsideofsweden-frontend",
     "version": "1.3.0",
     "private": true,
     "type": "module",
