--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
         "@sentry/nextjs": "7.57.0",
         "@shopify/hydrogen": "2023.4.6",
         "@shopify/hydrogen-react": "2023.4.5",
+        "@types/get-pixels": "3.3.2",
         "accept-language-parser": "1.5.0",
         "algoliasearch": "4.17.2",
         "axios": "1.4.0",
         "color": "4.2.3",
         "destyle.css": "4.0.0",
         "easy-currencies": "1.7.0",
-        "fast-average-color": "^9.3.0",
+        "extract-colors": "3.0.0",
+        "get-pixels": "3.3.3",
         "graphql": "16.7.1",
         "next": "13.4.9",
         "next-i18next": "14.0.0",
@@ -74,7 +76,9 @@
     "devDependencies": {
         "@slicemachine/adapter-next": "0.3.4",
         "@testing-library/react": "14.0.0",
+        "@types/color": "3.0.3",
         "@types/enzyme": "3.10.13",
+        "@types/extract-colors": "1.1.1",
         "@types/node": "18.16.19",
         "@types/react": "18.2.14",
         "@types/styled-components": "5.1.26",
