--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,3 +1,1 @@
-projects:
-    default:
-        schema: '@shopify/hydrogen-react/storefront.schema.json'
+schema: node_modules/@shopify/hydrogen-react/storefront.schema.json
