--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,13 @@
         "strictNullChecks": true
     },
     "exclude": ["dist", "node_modules", "out", "public", ".next", "next.config.mjs"],
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
+    "include": [
+        "next-env.d.ts",
+        "prismic-types.d.ts",
+        ".next/types/**/*.ts",
+        "./src/",
+        "./src/@types",
+        "**/*.ts",
+        "**/*.tsx"
+    ]
 }
