--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
               run: npm run test
 
     build:
+        if: false
         name: 🏗️ Build
         runs-on: ubuntu-latest
         env:
@@ -69,7 +70,7 @@ jobs:
 
     deploy-vercel:
         name: 🚚 Deploy Vercel
-        needs: [test, build]
+        needs: [test]
         timeout-minutes: 30
         runs-on: ubuntu-latest
         env:
@@ -113,7 +114,7 @@ jobs:
     deploy-oxygen:
         if: false
         name: 🚚 Deploy Oxygen
-        needs: [test, build]
+        needs: [test]
         timeout-minutes: 30
         runs-on: ubuntu-latest
         env:
