ProductCard: Use correct measurement system.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "accept-language-parser": "1.5.0",
         "axios": "1.4.0",
         "color": "4.2.3",
+        "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
         "easy-currencies": "1.7.0",
         "extract-colors": "3.0.0",
@@ -77,6 +78,7 @@
         "@slicemachine/adapter-next": "0.3.4",
         "@testing-library/react": "14.0.0",
         "@types/color": "3.0.3",
+        "@types/convert-units": "2.3.6",
         "@types/enzyme": "3.10.13",
         "@types/extract-colors": "1.1.1",
         "@types/node": "18.16.19",
