CI: Temp disable deploying through workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
               run: npm run build
 
     deploy-vercel:
+        if: false
         name: 🚚 Deploy Vercel
         needs: [test]
         timeout-minutes: 30
