--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,8 @@
 DOMAIN=www.sweetsideofsweden.com
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
+STORE_LOCALES=en-US
+STORE_CURRENCIES=USD
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 GTM=GTM-KGVH3RX
 ACCENT_PRIMARY=#274690
