Next: Disable compression and let cloudflare handle it instead.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,10 +57,12 @@ jobs:
               with:
                   path: |
                       ~/.npm
-                      .next
-                  key: ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}
+                      ${{ github.workspace }}/.next/cache
+                  # Generate a new cache whenever packages or source files change.
+                  key: ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx') }}
+                  # If source files changed but packages didn't, rebuild from a prior cache.
                   restore-keys: |
-                      ${{ runner.os }}-node-build-
+                      ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}-
 
             - name: 📦 Download dependencies
               run: npm ci
@@ -132,10 +134,14 @@ jobs:
             - name: 💾 Cache node modules
               uses: actions/cache@v3
               with:
-                  path: ~/.npm
-                  key: ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}
+                  path: |
+                      ~/.npm
+                      ${{ github.workspace }}/.next/cache
+                  # Generate a new cache whenever packages or source files change.
+                  key: ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx') }}
+                  # If source files changed but packages didn't, rebuild from a prior cache.
                   restore-keys: |
-                      ${{ runner.os }}-node-build-
+                      ${{ runner.os }}-node-build-${{ hashFiles('**/package-lock.json') }}-
 
             - name: 📦 Download dependencies
               run: npm ci
