i18n: Manually add all regions.

--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,7 @@
 DOMAIN=www.sweetsideofsweden.com
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
-STORE_LOCALES=en-US
-STORE_CURRENCIES=USD
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
+STORE_LOCALES=en-US,en-AT,en-AU,en-BE,en-BG,en-CA,en-CH,en-CY,en-CZ,de-DE,en-DE,en-DK,en-EE,en-ES,en-FI,sv-FI,en-FR,en-GB,en-GR,en-HR,en-HU,en-IE,en-IT,en-JP,en-KR,en-LT,en-LU,en-LV,en-MT,en-NL,en-NO,en-NZ,en-PL,en-PT,en-RO,en-SE,sv-SE,en-SI,en-SK
+STORE_CURRENCIES=USD,EUR,AUD,BGN,CAD,CHF,CZK,DKK,GBP,HUF,JPY,KRW,NOK,NZD,PLN,RON,SEK
 GTM=GTM-KGVH3RX
-ACCENT_PRIMARY=#274690
-ACCENT_SECONDARY=#EDD382
