CI: Try to fix vercel build.

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@ DOMAIN=www.sweetsideofsweden.com
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
-STORE_LOCALES=en-US,en-AT,en-AU,en-BE,en-BG,en-CA,en-CH,en-CY,en-CZ,de-DE,en-DE,en-DK,en-EE,en-ES,en-FI,sv-FI,en-FR,en-GB,en-GR,en-HR,en-HU,en-IE,en-IT,en-JP,en-KR,en-LT,en-LU,en-LV,en-MT,en-NL,en-NO,en-NZ,en-PL,en-PT,en-RO,en-SE,sv-SE,en-SI,en-SK
-STORE_CURRENCIES=USD,EUR,AUD,BGN,CAD,CHF,CZK,DKK,GBP,HUF,JPY,KRW,NOK,NZD,PLN,RON,SEK
+PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
+STORE_LOCALES=en-US
+STORE_CURRENCIES=USD,EUR
 GTM=GTM-KGVH3RX
