API: Add revalidate api route.

--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,4 @@ PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv
 STORE_LOCALES=en-US
 STORE_CURRENCIES=USD,EUR
 GTM=GTM-KGVH3RX
+WEBHOOK_REVALIDATE=AB5stBgmqQ4jkRvG2hOY2Ut-3ZV2UkN5Wg
